# slack-my-conversation

./: .dockerignore  .env.sample  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.dev  README.md  app.py  compose.yml  pyproject.toml
.github/workflows/: ci.yml
src/app/: __init__.py  config.py  main.py  message_handler.py  slack_client.py  types.py  utils.py
tests/: __init__.py  conftest.py  test_config.py  test_message_handler.py  test_slack_client.py  test_utils.py
